tests/fixtures/invalid/pow_none_int_bytes.py
# Cannot call pow() with None, Int, Bytes
x = pow(None, 1, b"hello")
